--- a/elements/_select.sass
+++ b/elements/_select.sass
@@ -1,6 +1,6 @@
-=select($border: 1px solid #eee, $w: 300px, $p: 12px, $r: 2px)
+=select($border: 1px solid #eee, $w: 100%, $p: 12px, $r: 2px)
   +border-radius($r)
-  +box-sizing(border-box)
+  +border-box
   position: relative
   overflow: hidden
   border: $border
