--- a/modules/_disc.sass
+++ b/modules/_disc.sass
@@ -1,4 +1,4 @@
-=icon-disc($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $c-text: #fff)
+=disc-flat($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $c-text: #fff)
   +inline-block
   +hide-text
   +fa-icon($icon)
@@ -17,13 +17,13 @@
     text-indent: 0
     margin-right: 0
 
-=icon-semiflat($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $strangth: 10%, $c-text: #fff)
-  +icon-disc($icon, $w, $size, $c, $c-text)
+=disc-semiflat($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $strangth: 10%, $c-text: #fff)
+  +disc-flat($icon, $w, $size, $c, $c-text)
   &:before
     +background-image(linear-gradient(to top, $c, lighten($c, $strangth)))
     margin-right: 0
 
-=icon-border($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $border: 2px)
+=disc-border($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $border: 2px)
   +fa-icon($icon)
   &:before
     +inline-block
