--- a/_all.sass
+++ b/_all.sass
@@ -1,11 +1,8 @@
-// Example:
+//example:
 // @import "vendor/spuit/addons/reset"
 // @import "vendor/spuit/all"
 
 @import "vendor/spuit/min"
-
-//outputs
-@import "vendor/spuit/at-roots/_margin"
 
 //spuit effects
 @import "vendor/spuit/effects/_animation-patterns"
@@ -13,7 +10,7 @@
 @import "vendor/spuit/effects/_timing-functions"
 @import "vendor/spuit/effects/_timing-functions-elastic"
 
-// elements
+//spuit elements
 @import "vendor/spuit/elements/_a"
 @import "vendor/spuit/elements/_checkbox"
 @import "vendor/spuit/elements/_dl"
@@ -25,7 +22,7 @@
 @import "vendor/spuit/elements/_input"
 @import "vendor/spuit/elements/_select"
 
-// modules
+//spuit modules
 @import "vendor/spuit/modules/_badge"
 @import "vendor/spuit/modules/_body"
 @import "vendor/spuit/modules/_button"
@@ -33,12 +30,13 @@
 @import "vendor/spuit/modules/_disc"
 @import "vendor/spuit/modules/_formset"
 @import "vendor/spuit/modules/_gist"
+@import "vendor/spuit/modules/_icon"
 @import "vendor/spuit/modules/_markdown"
 @import "vendor/spuit/modules/_meta"
 @import "vendor/spuit/modules/_pulldown"
 @import "vendor/spuit/modules/_scaffold"
 @import "vendor/spuit/modules/_searchbox"
-@import "vendor/spuit/modules/_tri"
+@import "vendor/spuit/modules/_triangle"
 @import "vendor/spuit/modules/_footer-fixed"
 @import "vendor/spuit/modules/_wordwrap-fadeout"
 
@@ -47,6 +45,4 @@
 @import "vendor/spuit/shortcuts/_rect"
 @import "vendor/spuit/shortcuts/_circle"
 @import "vendor/spuit/shortcuts/_border-box"
-
-
-
+@import "vendor/spuit/shortcuts/_at-roots"
