--- a/elements/_table.sass
+++ b/elements/_table.sass
@@ -1,84 +1,56 @@
-$_break-point: 640px
-
-%_table
+=table-base($padding: 5px 10px)
   width: 100%
   border-collapse: collapse
   th
     font-weight: bold
   th, td
-    padding: 5px 10px 5px 10px
+    padding: $padding
 
-
-=table-frame($_border-top: 2px solid #eee, $_border: 1px solid #eee)
-  @extend %_table
-  border-top: $_border
+//  .table--frame
+//    +table-frame
+=table-frame($border-top: 2px solid #eee, $border: 1px solid #eee)
+  +table-base
+  border-top: $border
   thead
     tr
       th, td
-        border: $_border
-        border-bottom: $_border-top !important
+        border: $border
+        border-bottom: $border-top
   tbody
     tr
       &:first-child
         th, td
           border-top: none
     th
-      border: $_border
-      border-bottom: $_border-top
+      border: $border
+      border-bottom: $border-top
     td
-      border: $_border
+      border: $border
 
-//----------------------------------------------------------------------
-
-=table-line($_border-top: 2px solid #eee, $_border: 1px solid #eee)
-  @extend %_table
+//  .table--line
+//    +table-line
+=table-line($border-top: 2px solid #eee, $border: 1px solid #eee)
+  +table-base
   thead
     tr
       th, td
-        border-bottom: $_border-top !important
+        border-bottom: $border-top
   tr
     &:first-child
       th, td
-        border: none
+        border-top: none
   th, td
-    border-top: $_border
+    border-top: $border
 
-//responcive
-=table-line-stacktable
-  +table-line
-  @media screen and (max-width: $_break-point)
-    display: none
-=table-line-stacktable-small
-  +table-line
-  display: none
-  @media screen and (max-width: $_break-point)
-    $_margin-top: 20px
-    display: table
-    margin-top: -$_margin-top
-    th, td
-      border-top: none
-    .st-head-row-main
-      display: none
-    .st-head-row
-      text-align: center
-      padding-top: $_margin-top
-      border-bottom: $_border-top !important
-    .st-key, .st-val
-      padding-top: 5px
-      padding-bottom: 5px
-      border-bottom: $_border !important
-
-//----------------------------------------------------------------------
-
-=table-stripe($_color-thead: #fff2f2, $_color-even: #f6f6f6, $_color-odd: #ffffff)
-  @extend %_table
+//  .table--stripe
+//    +table-stripe
+=table-stripe($color-thead: #fff, $color-even: #eee, $color-odd: #f8f8f8)
+  +table-base
   thead
     tr
-      background-color: $_color-thead
+      background-color: $color-thead
   tbody
     tr:nth-child(even)
-      background-color: $_color-even
+      background-color: $color-even
     tr:nth-child(odd)
-      background-color: $_color-odd
-
-
+      background-color: $color-odd
