--- a/mixins/_split.sass
+++ b/mixins/_split.sass
@@ -1,23 +1,23 @@
 // Example:
 
 // Simple Grid System - ie9-
-@function card-width($column: 5, $gutter: 2)
+@function split-width($column: 5, $gutter: 2)
   $parcent: (1/$column) * 100
   $margin: ($gutter * ($column - 1)) / $column
   @return ($parcent - $margin)
 
-=cards($column: 5, $gutter: 2, $break-point: 640px)
+=split($column: 5, $gutter: 2, $debug: true)
   @at-root
     #{&}
       +clearfix
       position: relative
     #{&}__item
-      display: block
+      @if $debug
+        +debug-block
+      +inline-block
       float: left
-      background: #ddd
       box-sizing: border-box
-      width: card-width($column, $gutter) * 1%
-      min-height: 1px
+      width: split-width($column, $gutter) * 1%
       margin-left: $gutter * 1%
       @for $i from 0 through 50
         @if $i%$column == 1
