--- a/modules/_button.sass
+++ b/modules/_button.sass
@@ -1,4 +1,39 @@
-=button-flat($size: 14px, $c: #ffa500, $c-text: #fff, $p: 10px 20px, $r: 2px)
+=button-base($c: transparent)
+  +inline-block
+  +appearance(none)
+  +box-shadow(none)
+  +border-radius(0px)
+  +background-image(linear-gradient(to top, $c, $c))
+  position: relative
+  cursor: pointer
+  text-align: center
+  font-weight: normal
+  margin: 0
+  padding: 0
+  background-color: $c
+  border: none
+  outline: none
+  text-decoration: none
+  &:focus
+    outline: none
+  &.is-disabled
+    +button-disabled
+  &.is-loading
+    +button-loading
+
+=button-disabled
+  cursor: default
+  pointer-events: none
+
+=button-loading
+  +fa-loading
+  +opacity(0.6)
+  pointer-events: none
+  cursor: default
+
+// .button-flat
+//   +button-flat(14px, #529ef6, #fff, 10px 20px, 2px)
+=button-flat($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $r: 2px)
   +button-base
   +border-radius($r)
   +transition(background-color 0.2s ease-out)
@@ -16,7 +51,9 @@
   &.is-current
     background-color: darken($c, 20%)
 
-=button-semiflat($size: 14px, $c: #ffa500, $strangth: 10%, $c-text: #fff, $p: 10px 20px, $r: 2px)
+// .button-semiflat
+//   +button-semiflat(14px, #529ef6, 10%, #fff, 10px 20px, 2px)
+=button-semiflat($size: 14px, $c: #529ef6, $strangth: 10%, $c-text: #fff, $p: 10px 20px, $r: 2px)
   +button-base
   +border-radius($r)
   +transition(background-color 0.2s ease-out)
@@ -39,7 +76,9 @@
     background: darken($c, $strangth)
     +background-image(linear-gradient(to top, darken($c, $strangth), $c))
 
-=button-border($size: 14px, $c: #ffa500, $c-text: #fff, $p: 10px 20px, $border: 1px, $r: 0px)
+// .button-border
+//   +button-border(14px, #529ef6, #fff, 10px 20px)
+=button-border($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $border: 1px, $r: 0px)
   +button-base
   +border-radius($r)
   +transition(background-color 0.2s ease-out)
@@ -62,7 +101,9 @@
     color: #fff
     border-color: transparet
 
-=button-emboss($size: 14px, $c: #ffa500, $c-text: #fff, $p: 10px 20px, $thickness: 6px, $r: 4px)
+// .button-emboss
+//   +button-emboss(14px, #529ef6, #fff, 10px 20px, 6px, 4px)
+=button-emboss($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $thickness: 6px, $r: 4px)
   +button-base
   +border-radius($r)
   +transition(background-color 0.2s ease-out)
@@ -88,28 +129,3 @@
     +box-shadow(0 0 0 $c)
     +translateY($thickness)
     background-color: darken($c, 10%)
-
-=button-icon($icon: '\f113', $w: 40px, $size: 20px, $c: #ffa500, $c-text: #fff)
-  +button-base
-  +border-radius($w)
-  +transition(background-color 0.2s ease-out)
-  +fa-icon($icon)
-  overflow: hidden
-  background: $c
-  color: $c-text
-  width: $w
-  height: $w
-  line-height: $w
-  font-size: $size
-  vertical-align: top
-  &:before
-    width: $w
-    height: $w
-    margin-right: 0
-  &:hover
-    background-color: darken($c, 10%)
-  &:active
-    background-color: darken($c, 30%)
-  &:disabled,
-  &.is-disabled
-    background-color: lighten($c, 30%)
