--- a/modules/_pulldown.sass
+++ b/modules/_pulldown.sass
@@ -21,6 +21,8 @@
     display: block
     text-decoration: none
     text-align: center
+    +break-points('mobile')
+      text-align: left
   &:hover,
   &.is-open
     .pulldown__content
@@ -34,20 +36,19 @@
     +opacity(0)
     +transform(translate(-50%, -60%) scale(0))
     +transition(all 0.2s ease-in-out)
-
     position: absolute
     top: 3em
     left: 50%
     z-index: 99999
-
     background: $c
     width: $w
-
     > li
       padding: 10px
       border-top: 1px solid $c
       &:first-child
         border-top: none
+      +break-points('mobile')
+        padding: 6px 4px
     &:after
       +rotate(180deg)
       content: ''
@@ -59,10 +60,8 @@
       top: -16px
       margin-left: -8px
       left: 50%
-  +break-points('mobile')
-    a
-      text-align: left
-    .pulldown__content
+
+    +break-points('mobile')
       +box-shadow(none)
       +border-radius(0px)
       +opacity(1)
@@ -81,4 +80,5 @@
         text-align: left
       &:after
         display: none
+
 
