--- a/modules/_triangle.sass
+++ b/modules/_triangle.sass
@@ -1,8 +1,5 @@
 // Example:
-// +tri(#222, 12px, $w/2, 0, 'left')
-
-=tri($c: #2dd, $w:20px, $l: 0, $t: 0, $direction: "right")
-  +triangle($c, $w, $l, $t, $direction)
+// +triangle(#222, 12px, $w/2, 0, 'left')
 
 =triangle($c: #2dd, $w:20px, $l: 0, $t: 0, $direction: "right")
   position: relative
@@ -37,4 +34,7 @@
       right: auto
       left: $l
       bottom: $t
+
+=tri($c: #2dd, $w:20px, $l: 0, $t: 0, $direction: "right")
+  +triangle($c, $w, $l, $t, $direction)
 
