--- a/_min.sass
+++ b/_min.sass
@@ -22,6 +22,9 @@
 @import "vendor/spuit/clones/_transform"
 @import "vendor/spuit/clones/_transition"
 
+//spuit elements
+@import "vendor/spuit/elements/_img"
+
 //spuit others
 @import "vendor/spuit/mixins/_debug"
 @import "vendor/spuit/mixins/_break-word"
