--- a/elements/_input.sass
+++ b/elements/_input.sass
@@ -1,6 +1,6 @@
 // input($color-bg: #f8f8f8, $color-bg-select: #fefef3, $color-border: transparent, $color-border-select: transparent, $color-placeholder: #ddd, $margin-left: 120px, $_break-point: 640px)
 
-=input($color-bg: #fefef3, $color-bg-select: #fff, $color-border: #eee, $color-border-select: #ccc, $color-placeholder: #ddd, $p: 10px, $r: 2px)
+=input-base($color-bg: #fefef3, $color-bg-select: #fff, $color-border: #eee, $color-border-select: #ccc, $color-placeholder: #ddd, $p: 10px, $r: 2px)
   $border: 1px solid transparent
 
   +border-radius($r)
@@ -21,6 +21,7 @@
     +placeholder
       +font(12px)
   &:focus
+    +box-shadow($color-border-select 0 0 10px)
     outline: 0
     background: $color-bg-select
     border-color: $color-border-select
