--- a/mixins/_fa.sass
+++ b/mixins/_fa.sass
@@ -42,7 +42,7 @@
   +inline-block
   +hide-text
   @if $round == true
-    +border-radius(60px)
+    +border-radius($w)
   width: $w
   height: $w
   &:before
