--- a/_min.sass
+++ b/_min.sass
@@ -23,6 +23,7 @@
 @import "vendor/spuit/clones/_transition"
 
 //spuit others
+@import "vendor/spuit/mixins/_break-word"
 @import "vendor/spuit/mixins/_button-base"
 @import "vendor/spuit/mixins/_fa"
 @import "vendor/spuit/mixins/_font-face"
