--- a/effects/_animation-patterns.sass
+++ b/effects/_animation-patterns.sass
@@ -1,33 +1,35 @@
-// +animation(anim-arrow 0.8s ease-out infinite)
-+keyframes(anim-arrow)
-  0%
-    +translateX(0%)
-  50%
-    +translateX(20%)
-  100%
-    +translateX(0%)
+=animation-set
+  @at-root
+    // +animation(anim-arrow 0.8s ease-out infinite)
+    +keyframes(anim-arrow)
+      0%
+        +translateX(0%)
+      50%
+        +translateX(20%)
+      100%
+        +translateX(0%)
 
-// +animation(anim-float 0.8s ease-out infinite)
-+keyframes(anim-float)
-  0%
-    +translateY(0%)
-  50%
-    +translateY(20%)
-  100%
-    +translateY(0%)
+    // +animation(anim-float 0.8s ease-out infinite)
+    +keyframes(anim-float)
+      0%
+        +translateY(0%)
+      50%
+        +translateY(20%)
+      100%
+        +translateY(0%)
 
-// +animation(anim-scale 0.8s ease-out)
-+keyframes(anim-scale)
-  0%
-    +scale(1)
-  50%
-    +scale(1.2)
-  100%
-    +scale(1)
+    // +animation(anim-scale 0.8s ease-out)
+    +keyframes(anim-scale)
+      0%
+        +scale(1)
+      50%
+        +scale(1.2)
+      100%
+        +scale(1)
 
-// +animation(anim-spin 1.6s infinite linear)
-+keyframes(anim-spin)
-  0%
-    +rotate(0deg)
-  100%
-    +rotate(360deg)
+    // +animation(anim-spin 1.6s infinite linear)
+    +keyframes(anim-spin)
+      0%
+        +rotate(0deg)
+      100%
+        +rotate(360deg)
