--- a/_min.sass
+++ b/_min.sass
@@ -11,6 +11,7 @@
 @import "vendor/spuit/clones/_box-sizing"
 @import "vendor/spuit/clones/_break-points"
 @import "vendor/spuit/clones/_clearfix"
+@import "vendor/spuit/clones/_flexboxgrid"
 @import "vendor/spuit/clones/_hide-text"
 @import "vendor/spuit/clones/_inline-block"
 @import "vendor/spuit/clones/_linear-gradient"
