--- a/mixins/_reset-form.sass
+++ b/mixins/_reset-form.sass
@@ -1,7 +1,7 @@
 =reset-form($c: transparent)
-  +appearance(none)
   +background-image(linear-gradient($c, $c))
-  +border-radius(0)
+  appearance: none
+  border-radius: 0
   border: none
   outline: none
   margin: 0
