--- a/elements/_input.sass
+++ b/elements/_input.sass
@@ -3,9 +3,9 @@
 =input-base($color-bg: #fefef3, $color-bg-select: #fff, $color-border: #eee, $color-border-select: #ccc, $color-placeholder: #ddd, $p: 10px, $r: 2px)
   $border: 1px solid transparent
 
-  +border-radius($r)
   +border-box
   +font(14px)
+  border-radius: $r
   width: auto
   line-height: normal
   padding: $p
@@ -22,7 +22,7 @@
     +placeholder
       +font(12px)
   &:focus
-    +box-shadow($color-border-select 0 0 10px)
+    box-shadow: $color-border-select 0 0 10px
     outline: 0
     background: $color-bg-select
     border-color: $color-border-select
