--- a/modules/_pulldown.sass
+++ b/modules/_pulldown.sass
@@ -30,12 +30,12 @@
       +transform(translate(-50%, 0) scale(1))
       display: block
   .pulldown__content
-    +box-shadow(0 1px 2px 1px rgba(0,0,0,0.1))
-    +border-radius(2px)
+    box-shadow: 0 1px 2px 1px rgba(0,0,0,0.1)
     +backface-visibility
     +opacity(0)
     +transform(translate(-50%, -60%) scale(0))
     +transition(all 0.2s ease-in-out)
+    border-radius: 2px
     position: absolute
     top: 3em
     left: 50%
@@ -62,10 +62,10 @@
       left: 50%
 
     +break-points('mobile')
-      +box-shadow(none)
-      +border-radius(0px)
+      box-shadow: none
       +opacity(1)
       +transform(translate(-50%, 0) scale(1))
+      border-radius: 0
       position: relative
       top: 0
       left: 50%
