--- a/_min.sass
+++ b/_min.sass
@@ -1,38 +1,43 @@
+//variables
+@import "vendor/spuit/_variables"
+
 //functions
 @import "vendor/spuit/functions/_strip-unit"
 
-//clones (compass, bourbon, ...)
+//clones (compass, bourbon, prefix, ...)
 @import "vendor/spuit/clones/_animation"
 @import "vendor/spuit/clones/_backface-visibility"
 @import "vendor/spuit/clones/_background-image"
 @import "vendor/spuit/clones/_break-points"
 @import "vendor/spuit/clones/_clearfix"
-@import "vendor/spuit/clones/_flexboxgrid"
-@import "vendor/spuit/clones/_hide-text"
 @import "vendor/spuit/clones/_inline-block"
 @import "vendor/spuit/clones/_linear-gradient"
-@import "vendor/spuit/clones/_nowrap"
 @import "vendor/spuit/clones/_opacity"
 @import "vendor/spuit/clones/_prefix"
 @import "vendor/spuit/clones/_selection"
 @import "vendor/spuit/clones/_text-shadow"
 @import "vendor/spuit/clones/_transform"
 @import "vendor/spuit/clones/_transition"
+@import "vendor/spuit/clones/_text-size-adjust"
+@import "vendor/spuit/clones/_placeholder"
 
-//spuit elements
-@import "vendor/spuit/elements/_img"
+//spuit utils
+@import "vendor/spuit/utils/_anim"
+@import "vendor/spuit/utils/_visibility"
+@import "vendor/spuit/utils/_margin"
+@import "vendor/spuit/utils/_padding"
+@import "vendor/spuit/utils/_clear"
+@import "vendor/spuit/utils/_size"
+@import "vendor/spuit/utils/_flexboxgrid"
 
-//spuit others
-@import "vendor/spuit/mixins/_debug"
-@import "vendor/spuit/mixins/_break-word"
-@import "vendor/spuit/mixins/_fa"
-@import "vendor/spuit/mixins/_font-face"
-@import "vendor/spuit/mixins/_font"
-@import "vendor/spuit/mixins/_split"
-@import "vendor/spuit/mixins/_grids"
-@import "vendor/spuit/mixins/_placeholder"
-@import "vendor/spuit/mixins/_reset-form"
-@import "vendor/spuit/mixins/_text-size-adjust"
-@import "vendor/spuit/mixins/_vertical-align"
-@import "vendor/spuit/mixins/_wrap-center"
-@import "vendor/spuit/mixins/_wrap"
+//spuit modules
+@import "vendor/spuit/modules/_hide-text"
+@import "vendor/spuit/modules/_nowrap"
+@import "vendor/spuit/modules/_debug"
+@import "vendor/spuit/modules/_break-word"
+@import "vendor/spuit/modules/_fa"
+@import "vendor/spuit/modules/_font-face"
+@import "vendor/spuit/modules/_font"
+@import "vendor/spuit/modules/_reset"
+@import "vendor/spuit/modules/_replace"
+@import "vendor/spuit/modules/_vertical-align"
