--- a/utils/_flexboxgrid.sass
+++ b/utils/_flexboxgrid.sass
@@ -61,7 +61,7 @@
     .last-#{$prefix}
       order: 1
 
-=flexbox-grid
+=util-flexboxgrid
   $gutter-width: 2em
   $outer-margin: 4em
   $width-sm: 34em
