--- a/elements/_select.sass
+++ b/elements/_select.sass
@@ -1,25 +1,34 @@
-=select($border: 1px solid #eee, $w: 100%, $p: 12px, $r: 2px)
+=select-base($w: 100%)
+  $border: 1px solid #ddd
+  $r: 2px
+
   +border-box
   border-radius: $r
   position: relative
   overflow: hidden
   border: $border
   width: $w
+
   select
     +reset-form
     +inline-block
     box-sizing: content-box
     width: 100%
-    padding: $p $p $p $p
+    padding: 10px 10px
     cursor: pointer
     color: #000
     background: #fff
+    background-image: $gradiation
+    font-size: 16px
+    color: $color-black
     &:focus
       outline: none
       border: none
+
   &:before
     +fa('\f0dc')
-    +absolute(0 + ($p/2), $p, 'right')
+    +absolute((10px/2), 12px, 'right')
+    color: $color-black
 
   select
     width: 110% // IE9
@@ -36,40 +45,3 @@
           &:-moz-focusring
             color: transparent
             text-shadow: none
-
-=select-fa($border: 1px solid none, $w: 100%, $p: 10px, $r: 4px)
-  $color: #222
-  $color-line: #222
-  +border-radius($r)
-  +border-box
-  position: relative
-  overflow: hidden
-  border: $border
-  width: $w
-  select
-    +reset-form
-    +inline-block
-    box-sizing: content-box
-    +font(14px, 1em)
-    width: 100%
-    padding: $p $p $p $p
-    cursor: pointer
-    color: $color
-    background: #fff
-    &:focus
-      outline: none
-      border: none
-  &:before
-    +fa('\f0dc')
-    color: $color
-    font-size: 12px
-    position: absolute
-    top: 0
-    right: 0
-    border-left: 1px solid darken($color-line, 5%)
-    padding: 0 16px
-    line-height: 35px
-  select
-    width: 110% // IE9
-    &::-ms-expand
-      display: none // IE10
