--- a/utils/_anim.sass
+++ b/utils/_anim.sass
@@ -27,8 +27,8 @@
       100%
         +scale(1)
 
-    // +animation(anim-spin 1.6s infinite linear)
-    +keyframes(anim-spin)
+    // +animation(anim-spiner 1.6s infinite linear)
+    +keyframes(anim-spiner)
       0%
         +rotate(0deg)
       100%
