--- a/components/_button.sass
+++ b/components/_button.sass
@@ -1,23 +1,26 @@
 =button-base($c: transparent)
-  +inline-block
+  box-sizing: border-box
   box-shadow: none
   appearance: none
+  display: inline-block
   border-radius: 0
-  +background-image(linear-gradient(to top, $c, $c))
+  background-color: $c
+  background-image: linear-gradient(to top, $c, $c)
   position: relative
   cursor: pointer
   text-align: center
   font-weight: normal
   margin: 0
   padding: 0
-  background-color: $c
   border: none
   outline: none
   text-decoration: none
   &:focus
     outline: none
+  &:disabled,
   &.is-disabled
     +button-disabled
+    opacity: 0.2
   &.is-loading
     +button-loading
 
@@ -26,125 +29,78 @@
   pointer-events: none
 
 =button-loading
-  +fa-loading
-  +opacity(0.6)
+  +icon-loading
+  opacity: 0.6
   pointer-events: none
   cursor: default
 
 // .button-flat
-//   +button-flat(14px, #529ef6, #fff, 10px 20px, 2px)
-=button-flat($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $r: 2px)
+//   +button-flat(1em, 10px 20px, #529ef6, #fff, 2px)
+=button-flat($size: 1em, $p: 10px 20px, $c: #529ef6, $c-text: #fff, $r: 2px)
   +button-base
-  +transition(background-color 0.2s ease-out)
-  +font($size)
+  font-size: $size
+  transition: $transition
   border-radius: $r
   background: $c
   color: $c-text
   padding: $p
-  &:hover
-    background-color: darken($c, 10%)
-  &:active
-    background-color: darken($c, 30%)
-  &:disabled,
-  &.is-disabled
-    background-color: lighten($c, 30%)
+  &:hover,
+  &:active,
   &.is-current
-    background-color: darken($c, 20%)
+    background-color: darken($c, 10%)
 
 // .button-semiflat
-//   +button-semiflat(14px, #529ef6, 10%, #fff, 10px 20px, 2px)
-=button-semiflat($size: 14px, $c: #529ef6, $strangth: 10%, $c-text: #fff, $p: 10px 20px, $r: 2px)
+//   +button-semiflat(1em, 10px 20px, #529ef6, 10%, #fff, 2px)
+=button-semiflat($size: 1em, $p: 9px 20px, $c: #529ef6, $strangth: 10%, $c-text: #fff, $r: 4px)
   +button-base
-  +transition(background-color 0.2s ease-out)
-  +font($size)
+  font-size: $size
+  transition: $transition
   border-radius: $r
   background: $c
-  +background-image(linear-gradient(to top, $c, lighten($c, $strangth)))
+  background-image: linear-gradient(to top, $c, lighten($c, $strangth))
   border: 1px solid lighten($c, $strangth)
   color: $c-text
   padding: $p
-  &:hover
-    background: darken($c, $strangth)
-    +background-image(linear-gradient(to top, darken($c, $strangth), $c))
-  &:active
-    background: darken($c, $strangth*2)
-    +background-image(linear-gradient(to top, darken($c, $strangth*2), darken($c, 10%)))
-  &:disabled,
-  &.is-disabled
-    background-color: lighten($c, $strangth*3)
+  &:hover,
+  &:active,
   &.is-current
     background: darken($c, $strangth)
-    +background-image(linear-gradient(to top, darken($c, $strangth), $c))
+    background-image: linear-gradient(to top, darken($c, $strangth), $c)
 
 // .button-border
-//   +button-border(14px, #529ef6, #fff, 10px 20px)
-=button-border($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $border: 1px, $r: 0px)
+//   +button-border(1em, 10px 20px, #529ef6, #fff)
+=button-border($size: 1em, $p: 9px 20px, $c: #529ef6, $c-text: #fff, $border: 1px, $r: 0px)
   +button-base
-  +transition(background-color 0.2s ease-out)
-  +font($size)
+  transition: $transition
   border-radius: $r
   background: transparent
   padding: $p
   border: $border solid $c
   color: $c
-  &:hover
-    background-color: $c
-    color: $c-text
-    border-color: transparet
-  &:active
-    background-color: darken($c, 10%)
-  &:disabled,
-  &.is-disabled
-    +opacity(0.2)
+  &:hover,
+  &:active,
   &.is-current
     background-color: $c
     color: $c-text
     border-color: transparet
-
-=button-colors($size: 14px, $c: #529ef6, $c-text: #fff, $c-hover: #fff, $c-hover-text: #529ef6, $p: 10px 20px, $r: 0px)
-  +button-base
-  +border-radius($r)
-  +transition(background-color 0.2s ease-out)
-  +font($size)
-  background: $c-text
-  padding: $p
-  color: $c
-  &:hover
-    background-color: darken($c-text, 20%)
-  &:active
-    background-color: darken($c, 10%)
-  &:disabled,
-  &.is-disabled
-    +opacity(0.2)
-  &.is-current
-    background-color: $c
-    color: $c-text
 
 // .button-emboss
-//   +button-emboss(14px, #529ef6, #fff, 10px 20px, 6px, 4px)
-=button-emboss($size: 14px, $c: #529ef6, $c-text: #fff, $p: 10px 20px, $thickness: 6px, $r: 4px)
+//   +button-emboss(1em, 10px 20px, #529ef6, #fff, 6px, 4px)
+=button-emboss($size: 1em, $p: 10px 20px, $c: #529ef6, $c-text: #fff, $thickness: 6px, $r: 4px)
   +button-base
-  +transition(background-color 0.2s ease-out)
-  +font($size)
+  font-size: $size
+  transition: $transition
+  transform: translateY(-$thickness)
   box-shadow: 0 $thickness 0 darken($c, 10%)
   border-radius: $r
   background: $c
   color: $c-text
   padding: $p
-  &:hover
-    +translateY(2px)
+  &:hover,
+  &:active,
+  &.is-current
+    transform: translateY(0)
     box-shadow: 0 ($thickness - 2px) 0 darken($c, 20%)
     background-color: darken($c, 2%)
-  &:active
-    +translateY($thickness)
-    box-shadow: 0 0 0 $c
-    background-color: darken($c, 10%)
-  &:disabled,
-  &.is-disabled
-    +translateY($thickness - 2px)
-    box-shadow: 0 2px 0 lighten($c, 2%)
-    background-color: lighten($c, 20%)
-  &.is-current
-    +translateY($thickness)
     box-shadow: 0 0 0 $c
     background-color: darken($c, 10%)
