--- a/utils/_flexboxgrid.sass
+++ b/utils/_flexboxgrid.sass
@@ -6,60 +6,60 @@
   $gutter-width: 2em
 
   @at-root
-    @for $i from 1 through 12
-      .col-#{$prefix}-#{$i}
-        box-sizing: border-box
-        flex: 0 0 auto
-        padding-right: $gutter-width * 0.5
-        padding-left: $gutter-width * 0.5
-      .col-#{$prefix}-offset-#{$i}
-        box-sizing: border-box
-        flex: 0 0 auto
-        padding-right: $gutter-width * 0.5
-        padding-left: $gutter-width * 0.5
-
-    .col-#{$prefix}
-      flex-grow: 1
-      flex-basis: 0
-      max-width: 100%
-
-    @for $i from 1 through 12
-      $parcent: (100/12) * $i * 1%
-      .col-#{$prefix}-#{$i}
-        flex-basis: $parcent
-        max-width: $parcent
-      .col-#{$prefix}-offset-#{$i}
-        margin-left: $parcent
-
     @media (min-width: $min-width)
+      @for $i from 1 through 12
+        .col-#{$prefix}-#{$i}
+          box-sizing: border-box
+          flex: 0 0 auto
+          padding-right: $gutter-width * 0.5
+          padding-left: $gutter-width * 0.5
+        .col-#{$prefix}-offset-#{$i}
+          box-sizing: border-box
+          flex: 0 0 auto
+          padding-right: $gutter-width * 0.5
+          padding-left: $gutter-width * 0.5
+
+      .col-#{$prefix}
+        flex-grow: 1
+        flex-basis: 0
+        max-width: 100%
+
+      @for $i from 1 through 12
+        $parcent: (100/12) * $i * 1%
+        .col-#{$prefix}-#{$i}
+          flex-basis: $parcent
+          max-width: $parcent
+        .col-#{$prefix}-offset-#{$i}
+          margin-left: $parcent
+
       .container
         width: $min-width - $gutter-width
         overflow: visible
         padding: 0
 
-    .start-#{$prefix}
-      justify-content: flex-start
-      text-align: start
-    .center-#{$prefix}
-      justify-content: center
-      text-align: center
-    .end-#{$prefix}
-      justify-content: flex-end
-      text-align: end
-    .top-#{$prefix}
-      align-items: flex-start
-    .middle-#{$prefix}
-      align-items: center
-    .bottom-#{$prefix}
-      align-items: flex-end
-    .around-#{$prefix}
-      justify-content: space-around
-    .between-#{$prefix}
-      justify-content: space-between
-    .first-#{$prefix}
-      order: -1
-    .last-#{$prefix}
-      order: 1
+      .start-#{$prefix}
+        justify-content: flex-start
+        text-align: start
+      .center-#{$prefix}
+        justify-content: center
+        text-align: center
+      .end-#{$prefix}
+        justify-content: flex-end
+        text-align: end
+      .top-#{$prefix}
+        align-items: flex-start
+      .middle-#{$prefix}
+        align-items: center
+      .bottom-#{$prefix}
+        align-items: flex-end
+      .around-#{$prefix}
+        justify-content: space-around
+      .between-#{$prefix}
+        justify-content: space-between
+      .first-#{$prefix}
+        order: -1
+      .last-#{$prefix}
+        order: 1
 
 =util-flexboxgrid
   $gutter-width: 2em
@@ -68,15 +68,10 @@
   $width-md: 48em
   $width-lg: 62em
 
-  +flexbox-grid-colmn(xs)
-  +flexbox-grid-colmn(sm, $width-sm)
-  +flexbox-grid-colmn(md, $width-md)
-  +flexbox-grid-colmn(lg, $width-lg)
-
   .container-fluid, .container
     margin-right: auto
     margin-left: auto
-    overflow: hidden
+    //overflow: hidden
     padding: 0 10px
 
   .container-fluid
@@ -89,8 +84,8 @@
     flex: 0 1 auto
     flex-direction: row
     flex-wrap: wrap
-    margin-right: ($gutter-width * 0.5) * -1
-    margin-left: ($gutter-width * 0.5) * -1
+    padding-right: ($gutter-width * 0.5) * -1
+    padding-left: ($gutter-width * 0.5) * -1
 
   .row.reverse
     flex-direction: row-reverse
@@ -98,3 +93,7 @@
   .col.reverse
     flex-direction: column-reverse
 
+  +flexbox-grid-colmn(xs)
+  +flexbox-grid-colmn(sm, $width-sm)
+  +flexbox-grid-colmn(md, $width-md)
+  +flexbox-grid-colmn(lg, $width-lg)
