--- a/modules/_reset.sass
+++ b/modules/_reset.sass
@@ -20,6 +20,12 @@
     display: inline-block
     vertical-align: top
 
+=reset-img
+  margin: 0
+  padding: 0
+  line-height: 0
+  vertical-align: baseline
+  border: none
 
 =reset-heading
   display: inline-block
