--- a/utils/_flexboxgrid.sass
+++ b/utils/_flexboxgrid.sass
@@ -71,7 +71,7 @@
   .container-fluid, .container
     margin-right: auto
     margin-left: auto
-    //overflow: hidden
+    overflow: hidden
     padding: 0 10px
 
   .container-fluid
