--- a/clones/_text-size-adjust.sass
+++ b/clones/_text-size-adjust.sass
@@ -1,3 +1,3 @@
 =text-size-adjust($argument: 100%)
-  +break-points('mobile')
-    +prefix(text-size-adjust, $argument)
+  +media($media-md)
+    text-size-adjust: $argument
