--- a/components/_form.sass
+++ b/components/_form.sass
@@ -6,8 +6,20 @@
     +select-base
   .radio
     +radio-base
+  .radio-inside
+    +radio-base(span)
   .checkbox
     +checkbox-base
+  .checkbox-inside
+    +checkbox-base(span)
+
+  .validate
+    +reset-ul
+    li
+      display: block
+      margin-bottom: 10px
+      &:last-child
+        margin-bottom: 20px
 
   fieldset
     $w: 150px
@@ -16,10 +28,13 @@
     display: block
     border: none
     margin: 0
-    padding: 0 0 10px $w
+    padding: 6px 0 10px $w
     box-sizing: border-box
+    +media($media-md)
+      padding: 6px 0 10px 0
 
     legend
+      +border-box
       font-size: 16px
       color: $color-black
       position: absolute
@@ -27,8 +42,12 @@
       display: inline-block
       border: none
       margin: 0
-      padding: 6px 0
+      padding-right: 20px
       width: $w
+      +media($media-md)
+        position: relative
+        width: 100%
+        padding-right: 0
 
     .small
       margin-top: 5px
