--- a/components/_split.sass
+++ b/components/_split.sass
@@ -6,27 +6,28 @@
   $margin: ($gutter * ($column - 1)) / $column
   @return ($parcent - $margin)
 
-=split($column: 5, $gutter: 2, $debug: true)
+=split($column: 5, $gutter: 2, $debug: false)
   @at-root
     #{&}
       +clearfix
+      +reset-ul
       position: relative
-    #{&}__item
-      @if $debug
-        +debug-block
-      +inline-block
-      float: left
-      box-sizing: border-box
-      width: split-width($column, $gutter) * 1%
-      margin-left: $gutter * 1%
-      @for $i from 0 through 50
-        @if $i%$column == 1
-          &:nth-child(#{$i})
-            clear: both
-            margin-left: 0
-        @else
-          &:nth-child(#{$i})
-            clear: none
-            margin-left: $gutter * 1%
-        margin-bottom: $gutter * 1%
+      > *
+        @if $debug
+          +debug-block
+        display: inline-block
+        float: left
+        box-sizing: border-box
+        width: split-width($column, $gutter) * 1%
+        margin-left: $gutter * 1%
+        @for $i from 0 through 50
+          @if $i%$column == 1
+            &:nth-child(#{$i})
+              clear: both
+              margin-left: 0
+          @else
+            &:nth-child(#{$i})
+              clear: none
+              margin-left: $gutter * 1%
+          margin-bottom: $gutter * 1%
 
