--- a/elements/_dl.sass
+++ b/elements/_dl.sass
@@ -1,87 +1,41 @@
-%_dl
-  $break-point: 640px
-  > dt
+=dl-base
+  margin: 0
+  padding: 0
+  > dt,
+  > dd
     baseline: top
-    padding: 10px 0 10px 0
+    margin: 0
+    padding: 10px 0
+    line-height: 1.6em
+  > dt
     font-weight: bold
-    line-height: 1.6em
+
+=dl-base-flex
+  +dl-base
+  display: flex
+  flex-flow: row wrap
+  justify-content: space-between
+  align-items: flex-start
+  align-content: flex-start
+  > dt,
   > dd
-    baseline: top
-    padding: 10px 0 10px 0
-    line-height: 1.6em
-  @media screen and (max-width: $break-point)
-    > dt
-      padding: 10px 0 0 0
-
-//----------------------------------------------------------------------
-
-//dl.dl-list（幅指定左のみ、左側の縦が長過ぎるとズレるのでnowrap付き）
-=dl-list-padding($break-point: 640px)
-  $_c: #ddd
-  $_width-left: 160px
-  $_width-right: 520px
-  $_margin: 20px
-  $_border: 1px $_c solid
-  $_break-point: 640px
-  @extend %_dl
-  position: relative
-  baseline: top
-  border-top: $_border
-  min-height: 1px
-  _height: 1%
+    +border-box
   > dt
-    +nowrap
-    clear: both
-    float: left
-    width: $_width-left
+    width: 30%
+    padding-right: 10px
   > dd
-    position: relative
-    padding-left: $_width-left + $_margin
-    border-bottom: $_border
-  @media screen and (max-width: $break-point)
-    > dt
-      float: none
-      width: auto
-    > dd
-      padding-left: 0
+    width: 70%
 
-
-//dl.dl-list-width（横幅指定必須）
-=dl-list-width($break-point: 640px)
-  $_c: #ddd
-  $_width-left: 160px
-  $_width-right: 520px
-  $_margin: 20px
-  $_border: 1px $_c solid
-  $_break-point: 640px
-  @extend %_dl
-  position: relative
-  *zoom: 1
-  +clearfix
-  border-bottom: $_border
-  width: $_width-right + $_width-left + $_margin
+=dl-border
+  +dl-base-flex
+  border-bottom: $border
   > dt
-    clear: both
-    float: left
-    width: $_width-left
-    border-top: $_border
-    display: block
+    border-top: $border
+    padding-right: 0
   > dd
-    position: relative
-    float: left
-    border-top: $_border
-    width: $_width-right
-    display: block
-    padding-left: $_margin
-  @media screen and (max-width: $break-point)
-    width: auto
-    > dt
-      float: none
-      width: auto
-    > dd
-      border-top: none
-      padding-left: 0
-      width: auto
+    border-top: $border
+    border-left: $border
+    padding-left: 20px
 
-
-
+=dl-list
+  +dl-base-flex
