--- a/components/_button.sass
+++ b/components/_button.sass
@@ -48,6 +48,7 @@
   &:active,
   &.is-current
     background-color: darken($c, 10%)
+    color: $c-text
 
 // .button-semiflat
 //   +button-semiflat(1em, 10px 20px, #529ef6, 10%, #fff, 2px)
