--- a/elements/_checkbox.sass
+++ b/elements/_checkbox.sass
@@ -14,6 +14,7 @@
       margin-right: 0.6em
       border: 1px solid #ddd
       vertical-align: top
+      text-align: center
       background: #fff
       color: #fff
       width: 28px
