--- a/_min.sass
+++ b/_min.sass
@@ -34,6 +34,7 @@
 @import "vendor/spuit/modules/_hide-text"
 @import "vendor/spuit/modules/_nowrap"
 @import "vendor/spuit/modules/_debug"
+@import "vendor/spuit/modules/_disc"
 @import "vendor/spuit/modules/_break-word"
 @import "vendor/spuit/modules/_fa"
 @import "vendor/spuit/modules/_font-face"
