--- a/components/_button.sass
+++ b/components/_button.sass
@@ -14,7 +14,7 @@
   padding: 0
   border: none
   outline: none
-  text-decoration: none
+  text-decoration: none !important
   &:focus
     outline: none
   &:disabled,
