--- a/utils/_margin.sass
+++ b/utils/_margin.sass
@@ -2,8 +2,8 @@
   @at-root
     @for $i from 0 through $count
       .mt#{($i*$margin)}
-        margin-top: #{($i*$margin)}px
+        margin-top: #{($i*$margin)}px !important
 
     @for $i from 0 through $count
       .mb#{($i*$margin)}
-        margin-bottom: #{($i*$margin)}px
+        margin-bottom: #{($i*$margin)}px !important
