--- a/utils/_size.sass
+++ b/utils/_size.sass
@@ -2,7 +2,7 @@
   @at-root
     @for $i from 0 through $count
       .w#{($i*$width)}
-        width: #{($i*$width)}px
+        width: #{($i*$width)}px !important
     @for $i from 0 through $count
       .h#{($i*$width)}
-        height: #{($i*$width)}px
+        height: #{($i*$width)}px !important
