--- a/_min.sass
+++ b/_min.sass
@@ -29,6 +29,7 @@
 @import "vendor/spuit/utils/_clear"
 @import "vendor/spuit/utils/_size"
 @import "vendor/spuit/utils/_flexboxgrid"
+@import "vendor/spuit/utils/_stickey-footer"
 
 //spuit modules
 @import "vendor/spuit/modules/_hide-text"
