--- a/modules/_reset.sass
+++ b/modules/_reset.sass
@@ -32,3 +32,16 @@
   border: none
   margin: 0
   padding: 0
+
+=reset-button
+  margin: 0
+  padding: 0
+  line-height: 0
+  vertical-align: baseline
+  border: none
+  background-color: transparent
+  cursor: pointer
+  &:focus,
+  &:active
+    border: none
+    outline: none
