--- a/utils/_visibility.sass
+++ b/utils/_visibility.sass
@@ -26,3 +26,6 @@
   +util-visible(sm, $media-sm)
   +util-visible(md, $media-md)
   +util-visible(lg, $media-lg)
+
+  .is-hidden
+    display: none !important
