--- a/components/_form.sass
+++ b/components/_form.sass
@@ -34,6 +34,7 @@
     +media($media-md)
       padding: 6px 0 10px 0
 
+    > label:first-child,
     legend
       +border-box
       font-size: 16px
