--- a/modules/_replace.sass
+++ b/modules/_replace.sass
@@ -7,7 +7,7 @@
   background-size: cover
   width: $w
   height: $h
-  +break-points('retina')
+  +breakpoint-retina
     background-image: url('#{$filepath}@2x.#{$filename}')
 
 =replace-fa($content: '\f105', $size: 1em, $width: 1em)
